[ 김하연 ] 기능추가: 상점 리스트 조회 앤드포인트 추가 및 스웨거 작성
